--- a/site.css
+++ b/site.css
@@ -50,7 +50,7 @@ $primaryRGB: rgb(183, 2, 0);
 $secondary: #8f7032;
 $accent: #830b20;
 $text: #000;
-$secondary_text: #363636;
+$secondary_text: #FFF;
 
 /* *** GENERAL STYLES *** */
 html { 
