--- a/site.css
+++ b/site.css
@@ -603,7 +603,7 @@ footer {
                 overflow: hidden;
                 z-index: 1;
                 border: none;
-                background: #ae0d29;
+                background: $primary;
                 font-family: Avenir-Medium;
                 font-size: 1rem;
                 color: $secondary_text;
